tests/minikube/test-apps/network-policies/calico/default-deny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: test-pods
spec:
  selector: all()
  types:
  - Ingress
  - Egress
